Revert "[improve][broker][branch-2.10] Backport Linux metrics changes from master branch (#20659)"
This reverts commit b355d3176f7b9fa029e97352c9cb0f4dd0e33649.